--- a/Afra Tabs final/templates/tabs/about.html
+++ b/Afra Tabs final/templates/tabs/about.html
@@ -7,7 +7,7 @@
         <div class="grid grid-cols-1 md:grid-cols-2 gap-15 items-center">
             <div class="text-left md:text-left">
                 <h1 class="text-4xl md:text-4xl font-bold mb-5 mr-4 leading-tight">
-                    Lorem ipsum dolor sit amet con. Euismod in nec condimentum vel
+                    Husban ipsum dolor sit amet con. Euismod in nec condimentum vel
                 </h1>
                 <p class="text-lg text-dark-text mb-10">
                     Lorem ipsum dolor sit amet consectetur. Euismod in nec condimentum vel tristique elementum egestas. Cras eu cras in
