--- a/templates/tabs/index.html
+++ b/templates/tabs/index.html
@@ -1,18 +1,18 @@
 {% extends 'base.html' %}
 {% load static %}
 
+{% block title %}Home | Afra's Tabs{% endblock %}
+
 {% block extra_css %}
-<link rel="stylesheet" href="{% static 'css/style.css' %}">
+<link rel="stylesheet" href="{% static 'css/index.css' %}">
 {% endblock %}
 
 {% block content %}
-
-
 <section class="stats-section">
     <div class="container">
         <div class="stats-grid">
             <div class="stats-text">
-                <h1>Lorem ipsum dolor sit amet con. Euismod in nec condimentum vel</h1>
+                <h1>husban ipsum dolor sit amet con. Euismod in nec condimentum vel</h1>
                 <p>Lorem ipsum dolor sit amet consectetur. Euismod in nec condimentum vel tristique elementum egestas.
                     Cras eu cras in</p>
             </div>
@@ -52,7 +52,6 @@
     </div>
 </section>
 
-
 <section class="latest-tabs-section">
     <div class="container">
         <div class="tabs-header">
@@ -68,11 +67,7 @@
             {% for song in latest_songs %}
             <div class="tab-card">
                 <a href="{% url 'tabs:artist_detail' song.artist.name_cleaned %}" class="tab-cover">
-                    {% if song.artist.name|length > 10 %}
-                        {{ song.artist.name|upper|slice:":10" }}
-                    {% else %}
-                        {{ song.artist.name|upper }}
-                    {% endif %}
+                    {{ song.artist.name|upper|slice:":10" }}
                 </a>
                 <div class="tab-content">
                     <div class="tab-date">Added {{ song.date_added|date:"M d, Y" }}</div>
@@ -89,12 +84,9 @@
                 </div>
             </div>
             {% empty %}
-            <div class="no-tabs">
-                <p>No tabs available yet.</p>
-            </div>
+            <div class="no-tabs"><p>No tabs available yet.</p></div>
             {% endfor %}
         </div>
     </div>
 </section>
-
 {% endblock %}
